add document links + loading effect

--- a/PROJECTS/DOCUMENTATION PAGE/index.html
+++ b/PROJECTS/DOCUMENTATION PAGE/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="./assets/css/index.css" />
     </head>
     <body>
+        <div class="loading">
+            <img src="./images/loading.svg" alt="Loading" />
+        </div>
         <div class="wrapper">
             <div class="menu-bar">
                 <div class="menu-bar__inner">
