change loading img

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="loading">
             <img
                 id="loading-image"
-                src="./images/loading.gif"
+                src="./images/loading.svg"
                 alt="Loading Screen"
             />
         </div>
