add new link for proj

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                         <ul class="portfolio__galery-list">
                             <li
                                 class="all page galery-item galery-item-tooltip"
-                                data-url="./PROJECTS/DOCUMENTATION PAGE/index.html"
+                                data-url="https://tranphuongdinh.github.io/DocumentationPage/"
                                 data-name="Documentation Page"
                             >
                                 <div class="item__img">
@@ -498,7 +498,7 @@
                             </li>
                             <li
                                 class="all app galery-item galery-item-tooltip"
-                                data-url="./PROJECTS/CALCULATOR APP/index.html"
+                                data-url="https://tranphuongdinh.github.io/Calculator/"
                                 data-name="Calculator"
                             >
                                 <div class="item__img">
