update close-btn + dark-mode btn

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="project-modal">
-            <span class="modal-close fa fa-times-circle-o"></span>
+            <span class="modal-close fa fa-times-circle"></span>
             <iframe class="project-modal__iframe" src=""></iframe>
         </div>
         <div class="mobile-menu">
