add project simple-paint-GDI

--- a/index.html
+++ b/index.html
@@ -446,6 +446,19 @@
                             </li>
                             <li
                                 class="all app galery-item galery-item-tooltip"
+                                data-url="https://www.youtube.com/embed/EPlcAJn45Mo"
+                                data-name="Simple Paint GDI"
+                            >
+                                <div class="item__img">
+                                    <img
+                                        id="simple-paint"
+                                        src="./images/SimplePaintGDI.webp"
+                                        alt="Simple Paint GDI"
+                                    />
+                                </div>
+                            </li>
+                            <li
+                                class="all app galery-item galery-item-tooltip"
                                 data-url="https://tranphuongdinh.github.io/MemeGenerator/"
                                 data-name="Meme Generator"
                             >
