--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <script src="https://use.fontawesome.com/eb06b48c58.js"></script>
         <link rel="stylesheet" href="./assets/css/index.css" />
         <link rel="shortcut icon" href="./images/avt-circle.webp" />
+        <script
+            async
+            defer
+            crossorigin="anonymous"
+            src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v11.0"
+            nonce="TY6PFMoA"
+        ></script>
     </head>
     <body>
         <div id="circle-cursor">
@@ -265,7 +272,7 @@
                                 <ul>
                                     <li>
                                         <a
-                                            href="https://www.facebook.com/Dinh.Ramos.SR4.CR7.NTH/"
+                                            href="https://www.facebook.com/DinhRamos.IClow/"
                                             target="_blank"
                                         >
                                             <span
@@ -494,7 +501,7 @@
                             </li>
                             <li
                                 class="all app galery-item galery-item-tooltip"
-                                data-url="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FDinh.Ramos.SR4.CR7.NTH%2Fvideos%2F2887868274829497%2F&show_text=false"
+                                data-url="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FDinhRamos.IClow%2Fvideos%2F2887868274829497%2F&show_text=true&appId"
                                 data-name="Bad Apple"
                             >
                                 <div class="item__img">
