fix snake project's link

--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                                             />
                                         </a>
                                         <a
-                                            href="./PROJECTS/FLAPPY BIRD/index.html"
+                                            href="./PROJECTS/FLAPPY BIRD/menu.html"
                                             target="_blank"
                                             class="source-demo__button"
                                         >
@@ -832,7 +832,7 @@
                                 <div class="item__img">
                                     <div class="source-demo">
                                         <a
-                                            href="https://www.youtube.com/embed/dPnHg6OUIIU"
+                                            href="https://www.youtube.com/embed/OfrRXK3a6pw"
                                             target="_blank"
                                             class="source-demo__button"
                                         >
