add movies.net project

--- a/index.html
+++ b/index.html
@@ -419,6 +419,40 @@
                         <ul class="portfolio__galery-list">
                             <li
                                 class="all page galery-item galery-item-tooltip"
+                                data-name="Movies.net"
+                            >
+                                <div class="item__img">
+                                    <div class="source-demo">
+                                        <a
+                                            href="https://github.com/TranPhuongDinh/movies.net"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-source.png"
+                                                alt="Source"
+                                            />
+                                        </a>
+                                        <a
+                                            href="https://tranphuongdinh.github.io/movies.net/index.html"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-demo.png"
+                                                alt="Demo"
+                                            />
+                                        </a>
+                                    </div>
+                                    <img
+                                        id="movies-page"
+                                        src="./images/movie-page-bg.webp"
+                                        alt="Movies.net"
+                                    />
+                                </div>
+                            </li>
+                            <li
+                                class="all page galery-item galery-item-tooltip"
                                 data-url=""
                                 data-name="Documentation Page"
                             >
@@ -690,40 +724,7 @@
                                     />
                                 </div>
                             </li>
-                            <li
-                                class="all page galery-item galery-item-tooltip"
-                                data-name="Loop Studio Page"
-                            >
-                                <div class="item__img">
-                                    <div class="source-demo">
-                                        <a
-                                            href="./PROJECTS/LOOPSTUDIOS-PAGE/index.html"
-                                            target="_blank"
-                                            class="source-demo__button"
-                                        >
-                                            <img
-                                                src="./images/web-source.png"
-                                                alt="Source"
-                                            />
-                                        </a>
-                                        <a
-                                            href="./PROJECTS/LOOPSTUDIOS-PAGE/index.html"
-                                            target="_blank"
-                                            class="source-demo__button"
-                                        >
-                                            <img
-                                                src="./images/web-demo.png"
-                                                alt="Demo"
-                                            />
-                                        </a>
-                                    </div>
-                                    <img
-                                        id="loopstudio-page"
-                                        src="./images/loop-studio-bg.webp"
-                                        alt="Loopstudio Page"
-                                    />
-                                </div>
-                            </li>
+
                             <li
                                 class="all app galery-item galery-item-tooltip"
                                 data-name="Hangman"
