add 3 templates / remove music player

--- a/index.html
+++ b/index.html
@@ -303,9 +303,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="music-player">
-                        <canvas id="canvas"></canvas>
-                    </div>
                 </div>
                 <div class="section about" id="about">
                     <div class="about__main">
@@ -398,13 +395,13 @@
                                     class="portfolio-filter__item"
                                     data-filter="page"
                                 >
-                                    <a href="#">page</a>
+                                    <a href="#">templates</a>
                                 </li>
                                 <li
                                     class="portfolio-filter__item"
                                     data-filter="app"
                                 >
-                                    <a href="#">app</a>
+                                    <a href="#">apps</a>
                                 </li>
                                 <li
                                     class="portfolio-filter__item"
@@ -483,6 +480,108 @@
                                         id="documentation-page"
                                         src="./images/documentation-page-bg.webp"
                                         alt="Documentation Page"
+                                    />
+                                </div>
+                            </li>
+                            <li
+                                class="all page galery-item galery-item-tooltip"
+                                data-name="Pooch Care Template"
+                            >
+                                <div class="item__img">
+                                    <div class="source-demo">
+                                        <a
+                                            href="https://github.com/TranPhuongDinh/PoochCare-template"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-source.png"
+                                                alt="Source"
+                                            />
+                                        </a>
+                                        <a
+                                            href="https://tranphuongdinh.github.io/PoochCare-template/"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-demo.png"
+                                                alt="Demo"
+                                            />
+                                        </a>
+                                    </div>
+                                    <img
+                                        id="poochcare"
+                                        src="./images/poochcare-bg.png"
+                                        alt="Pooch Care Template"
+                                    />
+                                </div>
+                            </li>
+                            <li
+                                class="all page galery-item galery-item-tooltip"
+                                data-name="Masterwork Template"
+                            >
+                                <div class="item__img">
+                                    <div class="source-demo">
+                                        <a
+                                            href="https://github.com/TranPhuongDinh/Masterwork-template"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-source.png"
+                                                alt="Source"
+                                            />
+                                        </a>
+                                        <a
+                                            href="https://tranphuongdinh.github.io/Masterwork-template/"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-demo.png"
+                                                alt="Demo"
+                                            />
+                                        </a>
+                                    </div>
+                                    <img
+                                        id="masterwork"
+                                        src="./images/masterwork-bg.png"
+                                        alt="Masterwork Template"
+                                    />
+                                </div>
+                            </li>
+                            <li
+                                class="all page galery-item galery-item-tooltip"
+                                data-name="Imroz Template"
+                            >
+                                <div class="item__img">
+                                    <div class="source-demo">
+                                        <a
+                                            href="https://github.com/TranPhuongDinh/Imroz-template"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-source.png"
+                                                alt="Source"
+                                            />
+                                        </a>
+                                        <a
+                                            href="https://tranphuongdinh.github.io/Imroz-template/"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-demo.png"
+                                                alt="Demo"
+                                            />
+                                        </a>
+                                    </div>
+                                    <img
+                                        id="imroz"
+                                        src="./images/imroz-bg.png"
+                                        alt="Imroz Template"
                                     />
                                 </div>
                             </li>
@@ -687,40 +786,6 @@
                                         id="weather-forecast"
                                         src="./images/weatherForecast-bg.webp"
                                         alt="Weather Forecast"
-                                    />
-                                </div>
-                            </li>
-                            <li
-                                class="all page galery-item galery-item-tooltip"
-                                data-name="Room Homepage"
-                            >
-                                <div class="item__img">
-                                    <div class="source-demo">
-                                        <a
-                                            href="./PROJECTS/ROOM - HOMEPAGE/index.html"
-                                            target="_blank"
-                                            class="source-demo__button"
-                                        >
-                                            <img
-                                                src="./images/web-source.png"
-                                                alt="Source"
-                                            />
-                                        </a>
-                                        <a
-                                            href="./PROJECTS/ROOM - HOMEPAGE/index.html"
-                                            target="_blank"
-                                            class="source-demo__button"
-                                        >
-                                            <img
-                                                src="./images/web-demo.png"
-                                                alt="Demo"
-                                            />
-                                        </a>
-                                    </div>
-                                    <img
-                                        id="room-homepage"
-                                        src="./images/room-homepage-bg.webp"
-                                        alt="Room Homepage"
                                     />
                                 </div>
                             </li>
@@ -944,6 +1009,5 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="./assets/js/index.js"></script>
-        <script src="./assets/js/music-player.js"></script>
     </body>
 </html>
